feat: mailgun config added

--- a/base.env
+++ b/base.env
@@ -47,16 +47,16 @@ EMAILER_PORT=8400
 EMAILER_DEBUG_PORT=9228
 # General Mailgun configuration to send emails for forgot password, welcome, etc.
 ALLOW_SENDING_EMAILS=true                                 # Set to false to disable sending emails
-EMAIL_FROM="Example <noreply@example.com>"                # The email address to send emails from
-EMAIL_REPLY_TO=customer-service@example.com               # The email address to reply to
-EMAIL_BCC=manager1@example.com,manager2@example.com       # The email address to send a copy of the email to
+EMAIL_FROM="Demo <mailgun@sandbox53348a1c56bc4fc2ab89a724c3c57747.mailgun.org>"                # The email address to send emails from
+EMAIL_REPLY_TO=mailgun@sandbox53348a1c56bc4fc2ab89a724c3c57747.mailgun.org               # The email address to reply to
+EMAIL_BCC=almbolonzi@gmail.com       # The email address to send a copy of the email to
 # The url to access the emailer from the inside of the docker network
 EMAILER_URL=http://emailer:${EMAILER_PORT}/emailer
 
 ## Email delivery configuration
 # Mailgun configuration
-# MAILGUN_API_KEY=your_api_key                             # Get your API key from https://app.mailgun.com/app/account/security/api_keys
-# MAILGUN_DOMAIN=mg.example.com                            # Get your domain from https://app.mailgun.com/app/sending/domains
+MAILGUN_API_KEY=key-f53e44ebb590c7d8f392ab8462a54d38                            # Get your API key from https://app.mailgun.com/app/account/security/api_keys
+MAILGUN_DOMAIN=sandbox53348a1c56bc4fc2ab89a724c3c57747.mailgun.org                            # Get your domain from https://app.mailgun.com/app/sending/domains
 # Gmail configuration
 # GMAIL_EMAIL=your_gmail_address                           # Your Gmail address
 # GMAIL_APP_PASSWORD=your_gmail_password                   # Your Gmail app password
