refactor: env update

--- a/base.env
+++ b/base.env
@@ -1,3 +1,4 @@
+APP_URL=https://mixed-dorthea-mansan-603d9b5f.koyeb.app/
 ## Redis
 REDIS_PORT=6379
 REDIS_URL=redis://redis
@@ -20,7 +21,7 @@ GATEWAY_PORT=8080
 GATEWAY_DEBUG_PORT=9225
 GATEWAY_EXPOSE_FRONTENDS=true      # The gateway proxies back-end services and optionally exposes the front-end applications
 CORS_ENABLED=true                  # Enable CORS for the gateway but also for the front-end applications
-DOMAIN_URL=http://localhost        # The domain of the application to define CORS in the gateway. Used also to limit the domain of the cookies used for session and refresh tokens 
+DOMAIN_URL=https://mixed-dorthea-mansan-603d9b5f.koyeb.app/        # The domain of the application to define CORS in the gateway. Used also to limit the domain of the cookies used for session and refresh tokens 
 # The url to access the gateway from the front-end applications
 GATEWAY_URL=http://localhost:${GATEWAY_PORT}
 # The url to access the gateway from the inside of the docker network
@@ -70,8 +71,8 @@ MAILGUN_DOMAIN=sandbox53348a1c56bc4fc2ab89a724c3c57747.mailgun.org              
 ## api
 API_PORT=8200
 API_DEBUG_PORT=9229
-DEMO_MODE=true    # Set the application in demo mode to use the demo database and a demo user
-RESTORE_DB=true   # Set to true to restore the database from the ./backup directory at statup
+DEMO_MODE=false   # Set the application in demo mode to use the demo database and a demo user
+RESTORE_DB=false   # Set to true to restore the database from the ./backup directory at statup
 # The url to access the api from the inside of the docker network
 API_URL=http://api:${API_PORT}/api/v2
 
