--- a/base.env
+++ b/base.env
@@ -1,4 +1,4 @@
-APP_URL=https://mixed-dorthea-mansan-603d9b5f.koyeb.app/
+APP_URL=http://microrealestate.mixed-dorthea.internal:8080
 ## Redis
 REDIS_PORT=6379
 REDIS_URL=redis://redis
@@ -23,7 +23,7 @@ GATEWAY_EXPOSE_FRONTENDS=true      # The gateway proxies back-end services and o
 CORS_ENABLED=true                  # Enable CORS for the gateway but also for the front-end applications
 DOMAIN_URL=https://mixed-dorthea-mansan-603d9b5f.koyeb.app/        # The domain of the application to define CORS in the gateway. Used also to limit the domain of the cookies used for session and refresh tokens 
 # The url to access the gateway from the front-end applications
-GATEWAY_URL=http://localhost:${GATEWAY_PORT}
+GATEWAY_URL=http://microrealestate.mixed-dorthea.internal:${GATEWAY_PORT}
 # The url to access the gateway from the inside of the docker network
 DOCKER_GATEWAY_URL=http://gateway:8080
 
