refactor: env update

--- a/base.env
+++ b/base.env
@@ -109,3 +109,5 @@ TENANT_BASE_PATH=/tenant
 TENANT_FRONTEND_URL=http://tenant-frontend:${TENANT_FRONTEND_PORT}
 # The url to access the tenant application from the browser
 TENANT_APP_URL=${APP_URL}${TENANT_BASE_PATH}
+
+PACK_RUNNING_IN_BUILDER=true
