--- a/base.env
+++ b/base.env
@@ -1,4 +1,4 @@
-APP_URL=http://microrealestate.mixed-dorthea.internal:8080
+APP_URL=http://localhost:8080
 
 ## Redis
 REDIS_PORT=6379
@@ -22,9 +22,9 @@ GATEWAY_PORT=8080
 GATEWAY_DEBUG_PORT=9225
 GATEWAY_EXPOSE_FRONTENDS=true      # The gateway proxies back-end services and optionally exposes the front-end applications
 CORS_ENABLED=true                  # Enable CORS for the gateway but also for the front-end applications
-DOMAIN_URL=https://mixed-dorthea-mansan-603d9b5f.koyeb.app/        # The domain of the application to define CORS in the gateway. Used also to limit the domain of the cookies used for session and refresh tokens 
+DOMAIN_URL=https://microrealestate.onrender.com       # The domain of the application to define CORS in the gateway. Used also to limit the domain of the cookies used for session and refresh tokens 
 # The url to access the gateway from the front-end applications
-GATEWAY_URL=http://microrealestate.mixed-dorthea.internal:${GATEWAY_PORT}
+GATEWAY_URL=http://localhost:${GATEWAY_PORT}
 # The url to access the gateway from the inside of the docker network
 DOCKER_GATEWAY_URL=http://gateway:8080
 
