--- a/render.yaml
+++ b/render.yaml
@@ -44,8 +44,6 @@ services:
         value: ${MONGO_URL}
       - key: RESETSERVICE_DEBUG_PORT
         value: ${RESETSERVICE_DEBUG_PORT}
-      - key: RESETSERVICE_PORT
-        value: ${RESETSERVICE_PORT}
     region: oregon
 
   # Gateway
@@ -62,7 +60,7 @@ services:
         value: --trace-warnings
       - key: RESETSERVICE_URL
         value: ${RESETSERVICE_URL}
-      - key: GATEWAY_PORT
+      - key: PORT
         value: ${GATEWAY_PORT}
       - key: GATEWAY_DEBUG_PORT
         value: ${GATEWAY_DEBUG_PORT}
@@ -80,7 +78,7 @@ services:
     envVars:
       - key: NODE_OPTIONS
         value: --trace-warnings
-      - key: AUTHENTICATOR_PORT
+      - key: PORT
         value: ${AUTHENTICATOR_PORT}
       - key: AUTHENTICATOR_DEBUG_PORT
         value: ${AUTHENTICATOR_DEBUG_PORT}
@@ -98,7 +96,7 @@ services:
     envVars:
       - key: NODE_OPTIONS
         value: --trace-warnings
-      - key: PDFGENERATOR_PORT
+      - key: PORT
         value: ${PDFGENERATOR_PORT}
       - key: PDFGENERATOR_DEBUG_PORT
         value: ${PDFGENERATOR_DEBUG_PORT}
@@ -116,7 +114,7 @@ services:
     envVars:
       - key: NODE_OPTIONS
         value: --trace-warnings
-      - key: EMAILER_PORT
+      - key: PORT
         value: ${EMAILER_PORT}
       - key: EMAILER_DEBUG_PORT
         value: ${EMAILER_DEBUG_PORT}
@@ -134,7 +132,7 @@ services:
     envVars:
       - key: NODE_OPTIONS
         value: --trace-warnings
-      - key: API_PORT
+      - key: PORT
         value: ${API_PORT}
       - key: API_DEBUG_PORT
         value: ${API_DEBUG_PORT}
@@ -152,7 +150,7 @@ services:
     envVars:
       - key: NODE_OPTIONS
         value: --trace-warnings
-      - key: TENANTAPI_PORT
+      - key: PORT
         value: ${TENANTAPI_PORT}
       - key: TENANTAPI_DEBUG_PORT
         value: ${TENANTAPI_DEBUG_PORT}
@@ -168,7 +166,7 @@ services:
     buildCommand: docker build -t landlord-frontend -f webapps/landlord/dev.Dockerfile --build-arg BASE_PATH=$LANDLORD_BASE_PATH .
     plan: free
     envVars:
-      - key: LANDLORD_FRONTEND_PORT
+      - key: PORT
         value: ${LANDLORD_FRONTEND_PORT}
     region: oregon
 
@@ -182,6 +180,6 @@ services:
     buildCommand: docker build -t tenant-frontend -f webapps/tenant/dev.Dockerfile --build-arg BASE_PATH=$TENANT_BASE_PATH .
     plan: free
     envVars:
-      - key: TENANT_FRONTEND_PORT
+      - key: PORT
         value: ${TENANT_FRONTEND_PORT}
     region: oregon
