--- a/render.yaml
+++ b/render.yaml
@@ -11,9 +11,10 @@ services:
     #   name: mongo-data
     #   mountPath: /data/db
     #   sizeGB: 10
+  - fromGroup: microrealestate
     envVars:
       - key: PORT
-        sync: 27017
+        value: 27017
       # - key: MONGO_URL
       #   value: MONGO_URL
       - fromGroup: microrealestate
@@ -26,6 +27,7 @@ services:
     dockerContext: .
     dockerfilePath: ./services/gateway/Dockerfile
     plan: free
+  - fromGroup: microrealestate
     envVars:
       - key: NODE_OPTIONS
         value: --trace-warnings
@@ -49,7 +51,6 @@ services:
         value: 8080
       - key: GATEWAY_DEBUG_PORT
         sync: false
-      - fromGroup: microrealestate
     region: oregon
 
   # Authenticator
@@ -59,6 +60,7 @@ services:
     dockerContext: .
     dockerfilePath: ./services/authenticator/Dockerfile
     plan: free
+  - fromGroup: microrealestate
     envVars:
       - key: NODE_OPTIONS
         value: --trace-warnings
@@ -80,7 +82,6 @@ services:
         sync: false
       - key: AUTHENTICATOR_DEBUG_PORT
         sync: false
-      - fromGroup: microrealestate
     region: oregon
 
   # PDFGenerator
@@ -90,6 +91,7 @@ services:
     dockerContext: .
     dockerfilePath: ./services/pdfgenerator/Dockerfile
     plan: free
+  - fromGroup: microrealestate
     envVars:
       - key: NODE_OPTIONS
         value: --trace-warnings
@@ -119,7 +121,6 @@ services:
         sync: false
       - key: PDFGENERATOR_DEBUG_PORT
         sync: false
-      - fromGroup: microrealestate
     region: oregon
 
   # Emailer
@@ -129,6 +130,7 @@ services:
     dockerContext: .
     dockerfilePath: ./services/emailer/Dockerfile
     plan: free
+  - fromGroup: microrealestate
     envVars:
       - key: NODE_OPTIONS
         value: --trace-warnings
@@ -162,7 +164,6 @@ services:
         sync: false
       - key: EMAILER_DEBUG_PORT
         sync: false
-      - fromGroup: microrealestate
     region: oregon
 
   # API
@@ -172,14 +173,36 @@ services:
     dockerContext: .
     dockerfilePath: ./services/api/Dockerfile
     plan: free
+  - fromGroup: microrealestate
     envVars:
       - key: NODE_OPTIONS
         value: --trace-warnings
+      - key: CIPHER_IV_KEY
+        sync: false
+      - key: CIPHER_KEY
+        sync: false
+      - key: DEMO_MODE
+        sync: false
+      - key: EMAILER_URL
+        sync: false
+      - key: LOGGER_LEVEL
+        sync: false
+      - key: MONGO_URL
+        sync: false
+      - key: PDFGENERATOR_URL
+        sync: false
+      - key: PRODUCTION
+        value: false
       - key: PORT
-        value: API_PORT
+        value: 8200
+      - key: REDIS_PASSWORD
+        sync: false
+      - key: REDIS_URL
+        sync: false
+      - key: RESTORE_DB
+        sync: false
       - key: API_DEBUG_PORT
-        value: API_DEBUG_PORT
-      - fromGroup: microrealestate
+        sync: false
     region: oregon
 
   # TenantAPI
