--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   # Mongo
-  - type: pserv
+  - type: web
     name: mongo
     env: docker
     dockerContext: .
@@ -53,7 +53,7 @@ services:
     region: oregon
 
   # Authenticator
-  - type: pserv
+  - type: web
     name: authenticator
     env: docker
     dockerContext: .
@@ -84,7 +84,7 @@ services:
     region: oregon
 
   # PDFGenerator
-  - type: pserv
+  - type: web
     name: pdfgenerator
     env: docker
     dockerContext: .
@@ -123,7 +123,7 @@ services:
     region: oregon
 
   # Emailer
-  - type: pserv
+  - type: web
     name: emailer
     env: docker
     dockerContext: .
@@ -166,7 +166,7 @@ services:
     region: oregon
 
   # API
-  - type: pserv
+  - type: web
     name: api
     env: docker
     dockerContext: .
@@ -205,7 +205,7 @@ services:
     region: oregon
 
   # TenantAPI
-  - type: pserv
+  - type: web
     name: tenantapi
     env: docker
     dockerContext: .
@@ -229,16 +229,10 @@ services:
         value: 8250
       - key: TENANTAPI_DEBUG_PORT
         sync: false
-      - key: PRODUCTION
-        value: false
-      - key: REDIS_PASSWORD
-        sync: false
-      - key: REDIS_URL
-        sync: false
     region: oregon
 
   # Landlord Frontend
-  - type: pserv
+  - type: web
     name: landlord-frontend
     env: docker
     dockerContext: .
@@ -251,7 +245,7 @@ services:
     region: oregon
 
   # Tenant Frontend
-  - type: pserv
+  - type: web
     name: tenant-frontend
     env: docker
     dockerContext: ./webapps/tenant/
