--- a/webapps/landlord/package.json
+++ b/webapps/landlord/package.json
@@ -94,7 +94,8 @@
     "prop-types": "15.8.1",
     "tailwind-merge": "2.5.2",
     "tailwindcss": "3.4.10",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "@types/node": "^18.17.0"
   },
   "resolutions": {
     "prosemirror-model": "1.18.3"
