--- a/webapps/landlord/package.json
+++ b/webapps/landlord/package.json
@@ -82,6 +82,7 @@
   "devDependencies": {
     "@babel/core": "7.21.3",
     "@types/lodash": "4.17.5",
+    "@types/node": "^18.17.0",
     "autoprefixer": "10.4.20",
     "babel-loader": "8.2.5",
     "eslint": "8.57.0",
@@ -94,8 +95,7 @@
     "prop-types": "15.8.1",
     "tailwind-merge": "2.5.2",
     "tailwindcss": "3.4.10",
-    "tailwindcss-animate": "1.0.7",
-    "@types/node": "^18.17.0"
+    "tailwindcss-animate": "1.0.7"
   },
   "resolutions": {
     "prosemirror-model": "1.18.3"
